--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.8.1",
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "google-maps-react": "^2.0.6"
   }
 }
